--- a/src/app/view/table-main/table-main.component.html
+++ b/src/app/view/table-main/table-main.component.html
@@ -424,7 +424,7 @@
 
                       </div>
                       <angular-editor [placeholder]="'พิมพ์ข้อความที่นี้...'" [config]="editorConfig"
-                        [(ngModel)]="typroText "></angular-editor>
+                        [(ngModel)]="typroText " style="font-family:  'Sarabun', sans-serif; "></angular-editor>
                     </div>
                   </div>
 
