เมื่อ ศุกร์ที่แล้ว 20//09 update manageagency

--- a/src/app/view/reportuser/reportuser.component.html
+++ b/src/app/view/reportuser/reportuser.component.html
@@ -26,9 +26,9 @@
               <th class="small-name">ชื่อ</th>
               <th class="small-name">นามสกุล</th>
               <th class="small-name">อีเมล</th>
-              <th class="small-name"style="vertical-align: middle; white-space: nowrap; text-align: center;">ระดับผู้ใช้งาน</th>
-              <th class="small-cell" style="vertical-align: middle; white-space: nowrap; text-align: center;">วันที่เข้าใช้งาน</th>
-              <th class="small-cell" style="vertical-align: middle; white-space: nowrap; text-align: center;">เวลาที่เข้าใช้งาน</th>
+              <th class="small-name"style="vertical-align: middle;  text-align: center;">ระดับผู้ใช้งาน</th>
+              <th class="small-cell" style="vertical-align: middle;  text-align: center;">วันที่เข้าใช้งาน</th>
+              <th class="small-cell" style="vertical-align: middle;  text-align: center;">เวลาที่เข้าใช้งาน</th>
               <!-- <th class="small-cell" style="color: black; font-size: 16px; text-align: center;">
                 <i class="fa fa-gear"></i>
               </th> -->
