--- a/src/app/view/table-detail/table-detail.component.html
+++ b/src/app/view/table-detail/table-detail.component.html
@@ -81,7 +81,10 @@
                                 </div>
                                 <div class="form-group">
                                     <label>สถานที่:</label>
-                                    <p>{{ detailItems?.record_place }}</p>
+                                           
+                                    <p class="inline-text">{{ detailItems?.record_place }}</p>
+                        
+                                 
                                 </div>
                             </div>
                             <div class="main-detail">
