--- a/src/app/view/manageagency/manageagency.component.html
+++ b/src/app/view/manageagency/manageagency.component.html
@@ -32,8 +32,8 @@
               <th style="width: 10%;">อีเมล</th>
               <th style="width: 12%;">เบอร์โทรศัพท์</th>
          
-              <!-- <th  style="color: black;  font-size: 16px; text-align: center;"><i
-                  class="fa fa-gear"></i></th> -->
+              <th  style="color: black;  font-size: 16px; text-align: center;"><i
+                  class="fa fa-gear"></i></th>
             </tr>
           </thead>
           <tbody>
@@ -53,12 +53,12 @@
         
 
 
-              <!-- <td class="small-cell-text"> 
+              <td class="small-cell-text"> 
               <button (click)="openEditAgencyModal(agency?._id)" style="border: none; background: none; color: black; text-align: center;" >
                 <i data-toggle="tooltip" title="ดูรายละเอียด" data-placement="top"
                   class="fa fa-pencil"></i>
               </button>
-            </td>   -->
+            </td>  
             </tr>
           </tbody>
         </table>
@@ -207,7 +207,7 @@
           </div>
         </div>
 
-        <!-- <div class="modal fade" id="EditAgencyModel" tabindex="-1" role="dialog" aria-labelledby="addItemModalLabel"
+        <div class="modal fade" id="EditAgencyModel" tabindex="-1" role="dialog" aria-labelledby="addItemModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
@@ -349,7 +349,7 @@
             </form>
           </div>
         </div>
-      </div> -->
+      </div>
 
       </div>
     </div>
