23//09 แก้ไขการดึงข้อมูล ทั้งหมด โดยจะจัดความเหมื่อนจาก id agency ข้อมูลยังไม่มีการแบ่งการมองเห็น ระหว่าง admin และ user

--- a/src/app/view/manageuser/agency-member/agency-member.component.html
+++ b/src/app/view/manageuser/agency-member/agency-member.component.html
@@ -3,7 +3,7 @@
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a [routerLink]="['/dashboard']">หน้าหลัก</a></li>
       <li class="breadcrumb-item"><a [routerLink]="['/manageuser']">จัดการผู้ใช้งาน</a></li>
-      <li class="breadcrumb-item active"><a aria-current="page">จัดการบุคคลกร</a></li>
+      <li class="breadcrumb-item active"><a aria-current="page">จัดการบุคคลกรในหน่วยงาน</a></li>
     </ol>
   </nav>
 
@@ -12,7 +12,7 @@
 
       <div class="card-header">
         <div class="card-title">
-          <p> จัดการผู้ใช้งาน</p>
+          <p> จัดการบุคคลกรในหน่วยงาน</p>
         </div>
 
         <button (click)="openAddPersonModal()" class="btn btn-add">
