--- a/src/app/view/thaicounty/thaicounty.component.html
+++ b/src/app/view/thaicounty/thaicounty.component.html
@@ -19,6 +19,7 @@
         <thead>
           <tr>
             <th>จังหวัด</th>
+            <!-- <th>จำนวนหน่วยงาน</th> -->
             <th>จำนวนเอกสาร</th>
             <th>จำนวนเอกสารที่ลงนามแล้ว</th>
             <th>เปอร์เซ็นต์</th>
