--- a/src/app/view/manageuser/manageuser.component.html
+++ b/src/app/view/manageuser/manageuser.component.html
@@ -62,7 +62,7 @@
                 <button (click)="openAgencyMember(users.id)"
                 style="border: none; background: none; color: black; text-align: center;">
                 <i data-toggle="tooltip" title="ดูรายชื่อบุคคลกร" data-placement="top"
-                  class="fa fa-building-o "></i>
+                  class="fa fa-users "></i>
               </button>
               </td>
             </tr>
