--- a/src/app/view/manageuser/profileuser/profileuser.component.css
+++ b/src/app/view/manageuser/profileuser/profileuser.component.css
@@ -251,6 +251,7 @@ i{
   border: 2px solid white;
 }
 
+
 .card-info{
   display: flex;
   justify-content: center;
@@ -268,13 +269,13 @@ display: flex;
 justify-content: center;
 
 }
-.card-avatar .upload{
-  position: absolute;
+.card-avatar  .upload{
+  position: relative;
   display: flex;
   height: 40px;
   width: 40px;
-  bottom: 10px; /* ติดกับขอบล่างของภาพ */
-  right: 10px;
+  bottom: 50px; /* ติดกับขอบล่างของภาพ */
+  right: -190px;
   align-items: center;
   justify-content: center;
 
@@ -314,6 +315,16 @@ justify-content: center;
   right: 10px;
   cursor: pointer;
   color: red;
+}
+
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  transform: translateY(20%);
+  width: 500px;
+  height: 450px;
+  position: relative;
 }
 
 .EditModal-content {
@@ -376,4 +387,25 @@ justify-content: center;
   background-color: #24a0ed; 
   border-color: #00087c9f;
   /* box-shadow: 0 14px 14px -12px #24a0ed51, 0 4px 14px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px #24a0ed51; */
+}
+
+:host ::ng-deep.flieUpload{
+  position: relative;
+  
+  justify-content: flex-end;
+  width: 360px;
+
+  border-radius: 5px;
+}
+input{
+  margin: 10px 0 0  ;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 5px;
+}
+::-webkit-file-upload-button{
+
+  border: none;
+  background-color: #24a0ed;
+  color: white;
+  border-radius: 5px 0 0 5px ;
 }
