--- a/src/app/view/table-main/table-main.component.html
+++ b/src/app/view/table-main/table-main.component.html
@@ -58,21 +58,21 @@
           </thead>
           <tbody>
 
-            <tr *ngFor="let item of items">
+            <tr *ngFor="let item of sameDataRecord">
               <td style="text-align: center;">
-                {{item?.record_id}}
+                {{item?.record?.record_id}}
               </td>
               <td style="white-space: nowrap;">
-                {{item?.record_topic}}
+                {{item?.record?.record_topic}}
               </td>
               <td style="vertical-align: middle; white-space: nowrap; text-align: center;">
-                {{item?.record_star_date | thaidate: "medium"}}
+                {{item?.record?.record_star_date | thaidate: "medium"}}
               </td>
               <td style="vertical-align: middle; white-space: nowrap; text-align: center;">
-                {{item?.record_end_date | thaidate: "medium"}}
+                {{item?.record?.record_end_date | thaidate: "medium"}}
               </td>
               <td class="text-center" style="white-space: nowrap;">
-                <button class="searchLocation" (click)="searchLocation(item?.record_location)">ดูพิกัด</button>
+                <button class="searchLocation" (click)="searchLocation(item?.record?.record_location)">ดูพิกัด</button>
               </td>
               <td style="vertical-align: middle; white-space: nowrap; text-align: center; justify-content: center;">
                 <i *ngIf="item.record_filename" class="fa-regular fa-circle-check checkIcon"> &nbsp;
@@ -83,15 +83,15 @@
                 </i>
               </td>
               <td class="text-center" style="width:1% ;white-space: nowrap;">
-                <button (click)="openDataDetail(item?._id)" style="border: none; background: none; color: black;">
+                <button (click)="openDataDetail(item?.record?._id)" style="border: none; background: none; color: black;">
                   <i data-toggle="tooltip" title="แกไข้หัวข้อเอกสาร" data-placement="top" class="fa fa-pencil"></i>
                 </button>
-                <button *ngIf="!item.record_filename" (click)="onRecord(item?._id)"
+                <button *ngIf="!item.record_filename" (click)="onRecord(item?.record?._id)"
                   style="border: none; background: none; color: black;">
                   <i data-toggle="tooltip" title="การจดบันทึก" data-placement="top"
                     class="fa fa-pencil-square-o Record"></i>
                 </button>
-                <button *ngIf="!item.record_filename" (click)="openDetailModal(item?._id)"
+                <button *ngIf="!item.record_filename" (click)="openDetailModal(item?.record?._id)"
                   style="border: none; background: none; color: black;">
                   <i data-toggle="tooltip" title="เพิ่มเนื้อหา" data-placement="top"
                     class="fa fa-file-text-o ModalIcon"></i>
@@ -100,13 +100,15 @@
                   <i class="fa fa-file-pdf-o" (click)="showPDF(item.record_filename)"></i>
                 </button>
                 <!-- land insert Qr code -->
-                <button *ngIf="!item.record_filename" (click)="openQrcode(item?._id)"
+                <button *ngIf="!item.record_filename" (click)="openQrcode(item?.record?._id)"
                   style="border: none; background: none; color: black;">
                   <i data-toggle="tooltip" title="QR code" data-placement="top" class="bi bi-qr-code"></i>
                 </button>
                 <!-- land insert Qr code  end-->
               </td>
             </tr>
+
+           
           </tbody>
         </table>
       </div>
