--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -45,8 +45,8 @@
 
             <div class="col-md-3 filter-item">
               <h4>เริ่มต้นวันที่</h4>
-              <div class="filter-box" (click)="toggleDropdown('date',$event)">
-                <input type="date" [(ngModel)]="startDate" (change)="onDateChange()" placeholder="เริ่มต้นวันที่">
+              <div class="filter-box">
+                <input type="date" [(ngModel)]="startDate" placeholder="เริ่มต้นวันที่">
               </div>
             </div>
 
@@ -58,7 +58,7 @@
             </div>
 
             <div class="col-md-3 align-self-end filter-item" style="max-width: 18%;">
-              <button type="submit" class="btn btn-add ">
+              <button type="button" class="btn btn-add " (click)="filterChartData()">
                 ดูข้อมูล
               </button>
             </div>
@@ -81,7 +81,7 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div>
                   <p class="title mb-0">เอกสารทั้งหมด</p>
-                  <h2 class="amount">{{ totalDocumentsCount }}</h2>
+                  <h2 class="amount">{{ SameOrganizationrecordCount }}</h2> <!--  totalDocumentsCount -->
                 </div>
                 <div class="imgBG">
                   <img src="./assets/img/manage.png" alt="paper" class="paper-img">
@@ -114,7 +114,7 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div>
                   <p class="title mb-0">เอกสารที่ถูกเซ็น</p>
-                  <h2 class="amount">{{ totalSignedDocumentsCount }}</h2>
+                  <h2 class="amount">{{   recordCountWithStatus1 }}</h2>
                 </div>
                 <div class="imgBG" style="padding-left: 12px;">
                   <img src="./assets/img/contract.png" alt="paper" class="paper-img">
@@ -148,7 +148,7 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div>
                   <p class="title mb-0">จำนวนกระดาษ</p>
-                  <h2 class="amount">{{totalDocumentsCount }}</h2>
+                  <h2 class="amount">{{  recordCountWithStatus1 }}</h2>
                 </div>
                 <!--totalSignedDocuments-->
                 <div class="imgBG">
@@ -212,7 +212,7 @@
 
           <div class="BGchart">
             <h4 *ngIf="isSuperAdmin">เอกสารที่ลงนาม & เอกสารที่ยังไม่ลงนาม</h4>
-            <h4 *ngIf="isAdmin">สรุปเอกสารรายเดือน</h4>
+            <h4 *ngIf="isAdmin">สรุปเอกสารรายเดือน {{filteredMonth || 'ทั้งหมด'}}</h4>
 
             <!-- Canvas สำหรับ SuperAdmin -->
             <canvas *ngIf="isSuperAdmin" id="myLineChart"></canvas>
