--- a/src/app/signature/signature.component.html
+++ b/src/app/signature/signature.component.html
@@ -104,7 +104,8 @@
             <div class="mt-2" *ngIf="loading" style="display: flex; justify-content: center;">
               <!--  -->
 
-              <pdf-viewer *ngIf="step == 1 || step == 0"
+              <pdf-viewer id="pdf-viewer" *ngIf="step == 1 || step == 0"
+                id="pdf-viewer"
                 [src]="pdfFile"
                 [render-text]="false" 
                 [original-size]="true"
@@ -113,15 +114,21 @@
                  (pages-initialized)="pageInitialized($event)"
                 (click)="selectEle($event)" [ngClass]="{'cursor-copy': stageMarkSign}"
                 style="display: flex; border: 1px solid black; 
-               box-shadow: 0 2px 5px rgba(0,0,0,0.1);  
+                box-shadow: 0 2px 5px rgba(0,0,0,0.1);  
                 width: 211mm;
                 height: 300mm; "></pdf-viewer>
 
-              <pdf-viewer *ngIf="step == 2" [src]="signaturedFile" [render-text]="false" [original-size]="true"
-                [show-all]="false" [(page)]="pageVariable" (pages-initialized)="pageInitialized($event)"
-                (click)="selectEle($event)" [ngClass]="{'cursor-copy': stageMarkSign}"
-                style=" width: 210mm;
-                height: 297mm;"></pdf-viewer>
+              <pdf-viewer id="pdf-viewer" *ngIf="step == 2" [src]="signaturedFile"
+              id="pdf-viewer"
+              [render-text]="false" 
+              [original-size]="true"
+              [show-all]="false" 
+              [(page)]="pageVariable" 
+              (pages-initialized)="pageInitialized($event)"
+              (click)="selectEle($event)" 
+              [ngClass]="{'cursor-copy': stageMarkSign}"
+              style=" width: 210mm;
+              height: 297mm;"></pdf-viewer>
 
               <div class="example-box" #cdkDrag_ cdkDragBoundary=".canvasWrapper" cdkDrag
                 *ngFor="let item of dragList; let i=index" [cdkDragFreeDragPosition]="item.position"
